--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,5 @@
+<div class="mat-typography">
+  <h2><a href="https://www.npmjs.com/package/ng-material2-facet-search">ng-material2-facet-search</a> Github API Example</h2>
+</div>
+
 <my-app>loading</my-app>
